# deltalake-lambda-rust-ingestion

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.cargo/: config.toml
bruno/: 00-health-check.bru  01-create-table.bru  02-insert.bru  03-upsert.bru  04-get-schema.bru  05-table-history.bru  06-time-travel.bru  07-optimize.bru  08-vacuum.bru  09-delete-table.bru  bruno.json
bruno/environments/: local.bru
data/state/: alb.json  apigateway.json  cloudwatch_logs.json  dynamodb.json  eventbridge.json  iam.json  lambda.json  s3.json  sns.json  sqs.json
scripts/: e2e_test.sh
src/: error.rs  lib.rs  main.rs  models.rs
src/adapters/inbound/: lambda.rs
src/adapters/outbound/: delta_repository.rs  in_memory_repository.rs  mod.rs
src/application/: ingestion_service.rs
src/domain/: commands.rs  mod.rs  ports.rs  results.rs
tests/: ingestion_tests.rs
