[package]
name = "deltalake-lambda-rust-ingestion"
version = "0.1.0"
edition = "2021"
description = "AWS Lambda for Delta Lake ingestion on S3 via delta-rs"

[lib]
name = "deltalake_lambda_rust_ingestion"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# Lambda runtime
lambda_runtime = { version = "0.13", features = ["tracing"] }

# Delta Lake — s3 pulls deltalake-aws; datafusion enables merge/optimize/z-order
deltalake = { version = "0.22", features = ["s3", "datafusion"] }

# AWS SDK — credential chain (Lambda execution role via IMDSv2)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async traits for object-safe async interfaces (port trait)
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Force OpenSSL to compile from source for cross-compilation (native-tls pulled by reqwest/delta_kernel)
openssl = { version = "0.10", features = ["vendored"] }
